Enhance patient and expert documentation with formatting improvements
- Added spacing for better readability in various sections across patient and expert documentation.
- Improved table formatting for clarity in payment and review sections.
- Enhanced step-by-step instructions with consistent formatting and spacing.
- Updated callout messages for better visual guidance and clarity.
- Ensured all changes are reflected in both English and Portuguese documentation.

--- a/src/content/docs/expert/en/index.mdx
+++ b/src/content/docs/expert/en/index.mdx
@@ -32,6 +32,7 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
     - HIPAA-compliant video calls
     - Patient management tools
     - Earnings dashboard and payouts
+
   </Tab>
   <Tab value="What You Provide">
     **Your Expertise**
@@ -41,11 +42,13 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
     - Clinical documentation (if applicable)
     - Your professional judgment
     - Professional liability insurance
+
   </Tab>
 </Tabs>
 
 <Callout type="info">
-  Eleva Care provides the technology platform. You, as an independent professional, provide the healthcare services and maintain your own malpractice insurance.
+  Eleva Care provides the technology platform. You, as an independent professional, provide the
+  healthcare services and maintain your own malpractice insurance.
 </Callout>
 
 ## Getting Started
@@ -55,31 +58,37 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
     ### Complete Your Profile
 
     Add your photo, bio, credentials, and select your specializations.
+
   </Step>
   <Step>
     ### Set Your Availability
 
     Configure your working hours and connect your calendar.
+
   </Step>
   <Step>
     ### Create Services
 
     Define your consultation offerings with descriptions and pricing.
+
   </Step>
   <Step>
     ### Connect Stripe
 
     Set up your payout account to receive earnings.
+
   </Step>
   <Step>
     ### Verify Your Identity
 
     Complete identity and credential verification.
+
   </Step>
   <Step>
     ### Publish Your Profile
 
     Make your profile visible to patients and start accepting bookings.
+
   </Step>
 </Steps>
 
@@ -98,6 +107,7 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
     | Payouts | Weekly (every Monday) |
     | Support | Email support (24hr response) |
     | Commission | 20% (commission-only) or 12% (subscription) |
+
   </Tab>
   <Tab value="Top Expert">
     **Premium Tier** — Earned through excellence
@@ -114,6 +124,7 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
     | Visibility | Featured placement in search |
 
     [Learn about Top Expert requirements →](/docs/expert/top-expert/requirements)
+
   </Tab>
 </Tabs>
 
@@ -138,11 +149,11 @@ Eleva Care empowers independent healthcare professionals to reach patients globa
 
 Our support team is here to help you succeed:
 
-| Channel | Details |
-|---------|---------|
-| Email | expert-support@eleva.care |
-| Response Time | Within 24 hours |
-| Community | Private expert community forums |
+| Channel       | Details                         |
+| ------------- | ------------------------------- |
+| Email         | expert-support@eleva.care       |
+| Response Time | Within 24 hours                 |
+| Community     | Private expert community forums |
 
 <Callout type="success">
   Ready to get started? [Set up your profile →](/docs/expert/getting-started/profile)
