--- a/src/content/docs/patient/en/booking.mdx
+++ b/src/content/docs/patient/en/booking.mdx
@@ -16,26 +16,31 @@ Booking an appointment on Eleva Care is simple and takes just a few minutes. Fol
     **Pregnancy & Birth Preparation**
 
     Physiotherapists, OB-GYNs, and midwives who specialize in prenatal care and birth preparation.
+
   </Tab>
   <Tab value="Postpartum">
     **Postpartum Recovery**
 
     Pelvic floor specialists and mental health professionals supporting your recovery journey.
+
   </Tab>
   <Tab value="Pelvic Health">
     **Pelvic Health**
 
     Specialists in incontinence, prolapse, and pelvic pain management.
+
   </Tab>
   <Tab value="Menopause">
     **Menopause & Hormonal Health**
 
     Endocrinologists and nutritionists guiding you through hormonal transitions.
+
   </Tab>
   <Tab value="Sexual Health">
     **Sexual Health**
 
     Therapists, counselors, and medical specialists providing compassionate care.
+
   </Tab>
 </Tabs>
 
@@ -43,12 +48,12 @@ Booking an appointment on Eleva Care is simple and takes just a few minutes. Fol
 
 Use filters to find your ideal expert:
 
-| Filter | Description |
-|--------|-------------|
-| Location | Find experts in your region or offering remote consultations |
-| Language | Filter by languages spoken |
-| Availability | Show only experts with open appointments |
-| Rating | Sort by patient reviews |
+| Filter       | Description                                                  |
+| ------------ | ------------------------------------------------------------ |
+| Location     | Find experts in your region or offering remote consultations |
+| Language     | Filter by languages spoken                                   |
+| Availability | Show only experts with open appointments                     |
+| Rating       | Sort by patient reviews                                      |
 
 ## Booking Process
 
@@ -57,21 +62,25 @@ Use filters to find your ideal expert:
     ### Select a Time Slot
 
     Click on the expert's profile, view their available time slots, and select a date and time that works for you.
+
   </Step>
   <Step>
     ### Confirm Your Details
 
     Review the appointment type (video call or in-person), confirm the duration and price, and add any notes for the expert.
+
   </Step>
   <Step>
     ### Complete Payment
 
     Choose your payment method, enter payment details, and confirm your booking.
+
   </Step>
 </Steps>
 
 <Callout type="success">
-  You'll receive a confirmation email with all the details of your appointment, including the video call link if applicable.
+  You'll receive a confirmation email with all the details of your appointment, including the video
+  call link if applicable.
 </Callout>
 
 ## Managing Appointments
@@ -83,6 +92,7 @@ Use filters to find your ideal expert:
     1. Go to **My Appointments**
     2. View upcoming and past appointments
     3. Access video call links when it's time
+
   </Accordion>
   <Accordion title="Rescheduling">
     Need to change your appointment time?
@@ -95,6 +105,7 @@ Use filters to find your ideal expert:
     <Callout type="warning">
       Please reschedule at least 24 hours before your appointment to avoid cancellation fees.
     </Callout>
+
   </Accordion>
   <Accordion title="Canceling an Appointment">
     If you need to cancel:
@@ -104,6 +115,7 @@ Use filters to find your ideal expert:
     3. Confirm the cancellation
 
     Refund policies vary by expert. Check the expert's cancellation policy before booking.
+
   </Accordion>
 </Accordions>
 
@@ -130,6 +142,7 @@ Use filters to find your ideal expert:
         Ensure your camera and microphone are working and you have a stable internet connection.
       </Step>
     </Steps>
+
   </Tab>
   <Tab value="In-Person">
     **In-Person Appointments**
@@ -151,6 +164,7 @@ Use filters to find your ideal expert:
         Bring any relevant medical records or test results.
       </Step>
     </Steps>
+
   </Tab>
 </Tabs>
 
