--- a/src/content/docs/patient/pt/index.mdx
+++ b/src/content/docs/patient/pt/index.mdx
@@ -17,7 +17,8 @@ A Eleva Care conecta-te com especialistas independentes e de confiança em saúd
     Escolhe um horário que te convém e marca online em minutos.
   </Card>
   <Card title="Conhecer o Especialista" href="/docs/patient/booking#consultation">
-    Conecta por videochamada segura ou presencialmente, dependendo da disponibilidade do especialista.
+    Conecta por videochamada segura ou presencialmente, dependendo da disponibilidade do
+    especialista.
   </Card>
 </Cards>
 
@@ -28,21 +29,25 @@ A Eleva Care conecta-te com especialistas independentes e de confiança em saúd
     **Apoio na Gravidez e Pós-Parto**
 
     Desde a conceção até ao quarto trimestre, os nossos especialistas fornecem cuidados completos incluindo preparação para o parto, apoio à amamentação e orientação na recuperação pós-parto.
+
   </Tab>
   <Tab value="Saúde Pélvica">
     **Especialistas em Pavimento Pélvico**
 
     Cuidados especializados para incontinência, prolapso, dor pélvica e reabilitação. Os nossos especialistas ajudam-te a recuperar força e confiança.
+
   </Tab>
   <Tab value="Menopausa">
     **Gestão da Menopausa**
 
     Navega as transições hormonais com orientação de endocrinologistas, nutricionistas e especialistas que compreendem as tuas necessidades em mudança.
+
   </Tab>
   <Tab value="Saúde Sexual">
     **Saúde Sexual e Bem-Estar**
 
     Apoio compassivo e baseado em evidências de terapeutas, conselheiros e especialistas médicos num ambiente sem julgamento.
+
   </Tab>
 </Tabs>
 
@@ -53,21 +58,25 @@ A Eleva Care conecta-te com especialistas independentes e de confiança em saúd
     ### Criar uma Conta
 
     Regista-te com o teu email ou login social para aceder à plataforma.
+
   </Step>
   <Step>
     ### Completar o Perfil
 
     Ajuda-nos a compreender as tuas necessidades para podermos recomendar os especialistas certos.
+
   </Step>
   <Step>
     ### Explorar Especialistas
 
     Encontra especialistas na tua área de interesse, filtrados por especialidade, idioma e disponibilidade.
+
   </Step>
   <Step>
     ### Marcar Consulta
 
     Seleciona um horário conveniente, completa o pagamento e recebe confirmação instantânea.
+
   </Step>
 </Steps>
 
