--- a/src/content/docs/patient/en/payments.mdx
+++ b/src/content/docs/patient/en/payments.mdx
@@ -18,6 +18,7 @@ Eleva Care provides a secure, transparent payment system. This guide covers ever
     - Visa
     - Mastercard
     - American Express
+
   </Tab>
   <Tab value="Regional Methods">
     **Local Payment Options**
@@ -29,11 +30,13 @@ Eleva Care provides a secure, transparent payment system. This guide covers ever
     | Portugal | Multibanco | Available |
     | Spain | Bank Transfer | Available |
     | Brazil | PIX | Coming Soon |
+
   </Tab>
 </Tabs>
 
 <Callout type="info">
-  All payments are processed securely through Stripe, a leading payment provider trusted by millions of businesses worldwide.
+  All payments are processed securely through Stripe, a leading payment provider trusted by millions
+  of businesses worldwide.
 </Callout>
 
 ## How Pricing Works
@@ -42,12 +45,12 @@ Eleva Care provides a secure, transparent payment system. This guide covers ever
 
 Each expert sets their own consultation fees based on:
 
-| Factor | Description |
-|--------|-------------|
-| Expertise Level | Community vs. Top Experts |
-| Consultation Type | Initial vs. follow-up |
-| Duration | 30, 45, or 60-minute sessions |
-| Specialty | Different areas of expertise |
+| Factor            | Description                   |
+| ----------------- | ----------------------------- |
+| Expertise Level   | Community vs. Top Experts     |
+| Consultation Type | Initial vs. follow-up         |
+| Duration          | 30, 45, or 60-minute sessions |
+| Specialty         | Different areas of expertise  |
 
 ### What's Included
 
@@ -59,6 +62,7 @@ Each expert sets their own consultation fees based on:
     - Access to secure video call platform
     - Session notes (if shared by expert)
     - Follow-up recommendations
+
   </Tab>
   <Tab value="Not Included">
     Your payment does not cover:
@@ -66,6 +70,7 @@ Each expert sets their own consultation fees based on:
     - Prescription medications
     - Lab tests or diagnostic procedures
     - In-person examinations (unless specified)
+
   </Tab>
 </Tabs>
 
@@ -76,40 +81,46 @@ Each expert sets their own consultation fees based on:
     ### Select Appointment
 
     Choose your appointment time and proceed to checkout.
+
   </Step>
   <Step>
     ### Enter Payment Details
 
     Provide your payment information securely.
+
   </Step>
   <Step>
     ### Authorization
 
     Payment is authorized and held securely.
+
   </Step>
   <Step>
     ### Confirmation
 
     Receive instant confirmation email with appointment details.
+
   </Step>
 </Steps>
 
 <Callout>
-  Your payment is held securely until 24 hours after your appointment is completed. This protects both you and the expert.
+  Your payment is held securely until 24 hours after your appointment is completed. This protects
+  both you and the expert.
 </Callout>
 
 ## Refunds & Cancellations
 
 ### Cancellation Windows
 
-| Timeframe | Refund Amount |
-|-----------|---------------|
-| 48+ hours before | 100% refund |
-| 24-48 hours before | 50% refund |
-| Less than 24 hours | No refund |
+| Timeframe          | Refund Amount |
+| ------------------ | ------------- |
+| 48+ hours before   | 100% refund   |
+| 24-48 hours before | 50% refund    |
+| Less than 24 hours | No refund     |
 
 <Callout type="warning">
-  Cancellation policies may vary by expert. Always check the expert's profile for their specific policy before booking.
+  Cancellation policies may vary by expert. Always check the expert's profile for their specific
+  policy before booking.
 </Callout>
 
 ### How to Request a Refund
@@ -119,16 +130,19 @@ Each expert sets their own consultation fees based on:
     ### Access Your Appointments
 
     Go to **My Appointments** in your patient portal.
+
   </Step>
   <Step>
     ### Find the Appointment
 
     Locate the appointment you wish to cancel.
+
   </Step>
   <Step>
     ### Request Refund
 
     Click **Cancel** or **Request Refund** and follow the prompts.
+
   </Step>
 </Steps>
 
@@ -143,6 +157,7 @@ Refunds are processed within 5-10 business days to your original payment method.
     1. **Contact the expert first** - Many issues can be resolved directly
     2. **Contact support** - Email support@eleva.care if unresolved
     3. **Investigation** - We'll investigate and mediate the dispute
+
   </Accordion>
 </Accordions>
 
@@ -163,7 +178,8 @@ Each receipt includes:
 - Transaction ID
 
 <Callout type="info">
-  **Insurance Reimbursement**: Some insurance plans may reimburse telehealth consultations. Your receipt includes all necessary details for submitting a claim.
+  **Insurance Reimbursement**: Some insurance plans may reimburse telehealth consultations. Your
+  receipt includes all necessary details for submitting a claim.
 </Callout>
 
 ## Security
@@ -176,11 +192,13 @@ Each receipt includes:
     - We never store your full card number
     - PCI DSS compliant infrastructure
     - Tokenized card storage via Stripe
+
   </Tab>
   <Tab value="Account Security">
     **Account Protection**
 
     Enable Two-Factor Authentication (2FA) in your account settings for additional security on all transactions.
+
   </Tab>
 </Tabs>
 
@@ -188,10 +206,12 @@ Each receipt includes:
 
 <Accordions>
   <Accordion title="Can I save my payment method?">
-    Yes, you can save your card for faster checkout. Your card details are stored securely by Stripe, not on our servers.
+    Yes, you can save your card for faster checkout. Your card details are stored securely by
+    Stripe, not on our servers.
   </Accordion>
   <Accordion title="Are there any hidden fees?">
-    No. The price shown when booking is the total amount you'll pay. No platform fees or hidden charges.
+    No. The price shown when booking is the total amount you'll pay. No platform fees or hidden
+    charges.
   </Accordion>
   <Accordion title="What currency will I be charged in?">
     You'll be charged in the currency shown at checkout, typically based on the expert's location.
