--- a/src/content/docs/patient/en/reviews.mdx
+++ b/src/content/docs/patient/en/reviews.mdx
@@ -16,21 +16,25 @@ You can leave a review after your appointment is completed. You'll receive an em
     ### Access Past Appointments
 
     Go to **My Appointments** → **Past** in your patient portal.
+
   </Step>
   <Step>
     ### Select the Appointment
 
     Find the completed appointment you want to review.
+
   </Step>
   <Step>
     ### Rate Your Experience
 
     Click **Leave Review** and rate from 1-5 stars.
+
   </Step>
   <Step>
     ### Add Feedback
 
     Write about your experience (optional but encouraged).
+
   </Step>
 </Steps>
 
@@ -44,6 +48,7 @@ You can leave a review after your appointment is completed. You'll receive an em
     - Mention what was particularly helpful
     - Share constructive feedback
     - Keep comments professional
+
   </Tab>
   <Tab value="Avoid">
     **Please Avoid**
@@ -52,24 +57,26 @@ You can leave a review after your appointment is completed. You'll receive an em
     - Using offensive language
     - Sharing the expert's private information
     - Reviewing appointments you didn't attend
+
   </Tab>
 </Tabs>
 
 <Callout type="info">
-  Reviews are moderated to ensure they follow our community guidelines. Most reviews are published within 24 hours.
+  Reviews are moderated to ensure they follow our community guidelines. Most reviews are published
+  within 24 hours.
 </Callout>
 
 ## Understanding Ratings
 
 ### Star Rating System
 
-| Rating | Meaning |
-|--------|---------|
+| Rating  | Meaning                           |
+| ------- | --------------------------------- |
 | 5 Stars | Excellent - Exceeded expectations |
-| 4 Stars | Very Good - Met expectations |
-| 3 Stars | Good - Room for improvement |
-| 2 Stars | Fair - Some issues |
-| 1 Star | Poor - Significant problems |
+| 4 Stars | Very Good - Met expectations      |
+| 3 Stars | Good - Room for improvement       |
+| 2 Stars | Fair - Some issues                |
+| 1 Star  | Poor - Significant problems       |
 
 ### Rating Criteria
 
@@ -97,11 +104,11 @@ When leaving a review, consider these aspects:
 
 Experts may earn recognition badges based on performance:
 
-| Badge | Criteria |
-|-------|----------|
-| Top Expert | Consistently high ratings (4.8+ average) |
-| Quick Responder | Responds to inquiries within 24 hours |
-| Highly Recommended | High percentage of repeat bookings |
+| Badge              | Criteria                                 |
+| ------------------ | ---------------------------------------- |
+| Top Expert         | Consistently high ratings (4.8+ average) |
+| Quick Responder    | Responds to inquiries within 24 hours    |
+| Highly Recommended | High percentage of repeat bookings       |
 
 ## Reading Reviews
 
@@ -115,7 +122,8 @@ View expert reviews directly on their profile page:
 4. Filter by rating or date
 
 <Callout>
-  All reviews on Eleva Care are from verified patients who completed an appointment. This ensures authentic, trustworthy feedback.
+  All reviews on Eleva Care are from verified patients who completed an appointment. This ensures
+  authentic, trustworthy feedback.
 </Callout>
 
 ### Review Statistics
@@ -137,6 +145,7 @@ Each expert profile displays:
     2. Find the review you want to edit
     3. Click **Edit** and make your changes
     4. Save your updates
+
   </Accordion>
   <Accordion title="Deleting Your Review">
     To remove your review:
@@ -148,6 +157,7 @@ Each expert profile displays:
     <Callout type="warning">
       Once deleted, your review cannot be recovered. You can leave a new review if desired.
     </Callout>
+
   </Accordion>
   <Accordion title="Expert Responses">
     Experts may respond to reviews. If an expert responds:
@@ -155,6 +165,7 @@ Each expert profile displays:
     - You'll receive a notification
     - View the response on the review page
     - Responses are visible to all users
+
   </Accordion>
 </Accordions>
 
@@ -169,16 +180,19 @@ If you see a review that violates our guidelines:
     ### Report the Review
 
     Click **Report** on the review in question.
+
   </Step>
   <Step>
     ### Select a Reason
 
     Choose the most appropriate reason for reporting.
+
   </Step>
   <Step>
     ### Submit
 
     Our team will investigate and take action if needed.
+
   </Step>
 </Steps>
 
@@ -190,7 +204,8 @@ For significant issues with an expert, contact support@eleva.care directly with 
 
 <Accordions>
   <Accordion title="Are reviews anonymous?">
-    Reviews show your first name and last initial (e.g., "Maria S."). Your full name is not displayed publicly.
+    Reviews show your first name and last initial (e.g., "Maria S."). Your full name is not
+    displayed publicly.
   </Accordion>
   <Accordion title="Can experts see who left negative reviews?">
     Experts can see the first name and initial of all reviewers, regardless of rating.
