--- a/src/content/docs/patient/pt/booking.mdx
+++ b/src/content/docs/patient/pt/booking.mdx
@@ -16,26 +16,31 @@ Marcar uma consulta na Eleva Care é simples e leva apenas alguns minutos. Segue
     **Gravidez e Preparação para o Parto**
 
     Fisioterapeutas, obstetras e parteiras especializadas em cuidados pré-natais e preparação para o parto.
+
   </Tab>
   <Tab value="Pós-Parto">
     **Recuperação Pós-Parto**
 
     Especialistas em pavimento pélvico e profissionais de saúde mental que apoiam a tua jornada de recuperação.
+
   </Tab>
   <Tab value="Saúde Pélvica">
     **Saúde Pélvica**
 
     Especialistas em incontinência, prolapso e gestão de dor pélvica.
+
   </Tab>
   <Tab value="Menopausa">
     **Menopausa e Saúde Hormonal**
 
     Endocrinologistas e nutricionistas que te orientam através das transições hormonais.
+
   </Tab>
   <Tab value="Saúde Sexual">
     **Saúde Sexual**
 
     Terapeutas, conselheiros e especialistas médicos que fornecem cuidados compassivos.
+
   </Tab>
 </Tabs>
 
@@ -43,12 +48,12 @@ Marcar uma consulta na Eleva Care é simples e leva apenas alguns minutos. Segue
 
 Usa filtros para encontrar o especialista ideal:
 
-| Filtro | Descrição |
-|--------|-----------|
-| Localização | Encontra especialistas na tua região ou que oferecem consultas remotas |
-| Idioma | Filtra por idiomas falados |
-| Disponibilidade | Mostra apenas especialistas com vagas |
-| Avaliação | Ordena por avaliações de pacientes |
+| Filtro          | Descrição                                                              |
+| --------------- | ---------------------------------------------------------------------- |
+| Localização     | Encontra especialistas na tua região ou que oferecem consultas remotas |
+| Idioma          | Filtra por idiomas falados                                             |
+| Disponibilidade | Mostra apenas especialistas com vagas                                  |
+| Avaliação       | Ordena por avaliações de pacientes                                     |
 
 ## Processo de Marcação
 
@@ -57,21 +62,25 @@ Usa filtros para encontrar o especialista ideal:
     ### Selecionar Horário
 
     Clica no perfil do especialista, vê os horários disponíveis e seleciona uma data e hora conveniente.
+
   </Step>
   <Step>
     ### Confirmar Detalhes
 
     Revê o tipo de consulta (videochamada ou presencial), confirma a duração e preço, e adiciona notas para o especialista.
+
   </Step>
   <Step>
     ### Completar Pagamento
 
     Escolhe o método de pagamento, introduz os dados e confirma a marcação.
+
   </Step>
 </Steps>
 
 <Callout type="success">
-  Receberás um email de confirmação com todos os detalhes da tua consulta, incluindo o link para videochamada se aplicável.
+  Receberás um email de confirmação com todos os detalhes da tua consulta, incluindo o link para
+  videochamada se aplicável.
 </Callout>
 
 ## Gerir Consultas
@@ -83,6 +92,7 @@ Usa filtros para encontrar o especialista ideal:
     1. Vai a **Minhas Consultas**
     2. Vê consultas futuras e passadas
     3. Acede aos links de videochamada quando for altura
+
   </Accordion>
   <Accordion title="Reagendar">
     Precisas de mudar o horário?
@@ -95,6 +105,7 @@ Usa filtros para encontrar o especialista ideal:
     <Callout type="warning">
       Por favor reagenda com pelo menos 24 horas de antecedência para evitar taxas de cancelamento.
     </Callout>
+
   </Accordion>
   <Accordion title="Cancelar uma Consulta">
     Se precisares de cancelar:
@@ -104,6 +115,7 @@ Usa filtros para encontrar o especialista ideal:
     3. Confirma o cancelamento
 
     As políticas de reembolso variam por especialista. Verifica a política de cancelamento antes de marcar.
+
   </Accordion>
 </Accordions>
 
@@ -130,6 +142,7 @@ Usa filtros para encontrar o especialista ideal:
         Certifica-te que a câmara e microfone funcionam e tens ligação estável à internet.
       </Step>
     </Steps>
+
   </Tab>
   <Tab value="Presencial">
     **Consultas Presenciais**
@@ -151,6 +164,7 @@ Usa filtros para encontrar o especialista ideal:
         Traz registos médicos ou resultados de exames relevantes.
       </Step>
     </Steps>
+
   </Tab>
 </Tabs>
 
