--- a/src/content/docs/patient/pt/payments.mdx
+++ b/src/content/docs/patient/pt/payments.mdx
@@ -18,6 +18,7 @@ A Eleva Care fornece um sistema de pagamento seguro e transparente. Este guia co
     - Visa
     - Mastercard
     - American Express
+
   </Tab>
   <Tab value="Métodos Regionais">
     **Opções de Pagamento Locais**
@@ -29,11 +30,13 @@ A Eleva Care fornece um sistema de pagamento seguro e transparente. Este guia co
     | Portugal | Multibanco | Disponível |
     | Espanha | Transferência Bancária | Disponível |
     | Brasil | PIX | Em Breve |
+
   </Tab>
 </Tabs>
 
 <Callout type="info">
-  Todos os pagamentos são processados de forma segura através do Stripe, um fornecedor de pagamentos líder, confiado por milhões de empresas em todo o mundo.
+  Todos os pagamentos são processados de forma segura através do Stripe, um fornecedor de pagamentos
+  líder, confiado por milhões de empresas em todo o mundo.
 </Callout>
 
 ## Como Funcionam os Preços
@@ -42,12 +45,12 @@ A Eleva Care fornece um sistema de pagamento seguro e transparente. Este guia co
 
 Cada especialista define as suas próprias taxas de consulta com base em:
 
-| Fator | Descrição |
-|-------|-----------|
-| Nível de Especialização | Comunidade vs. Top Experts |
-| Tipo de Consulta | Inicial vs. seguimento |
-| Duração | Sessões de 30, 45 ou 60 minutos |
-| Especialidade | Diferentes áreas de expertise |
+| Fator                   | Descrição                       |
+| ----------------------- | ------------------------------- |
+| Nível de Especialização | Comunidade vs. Top Experts      |
+| Tipo de Consulta        | Inicial vs. seguimento          |
+| Duração                 | Sessões de 30, 45 ou 60 minutos |
+| Especialidade           | Diferentes áreas de expertise   |
 
 ### O Que Está Incluído
 
@@ -59,6 +62,7 @@ Cada especialista define as suas próprias taxas de consulta com base em:
     - Acesso à plataforma de videochamada segura
     - Notas da sessão (se partilhadas pelo especialista)
     - Recomendações de seguimento
+
   </Tab>
   <Tab value="Não Incluído">
     O teu pagamento não cobre:
@@ -66,6 +70,7 @@ Cada especialista define as suas próprias taxas de consulta com base em:
     - Medicamentos prescritos
     - Análises ou procedimentos de diagnóstico
     - Exames presenciais (exceto se especificado)
+
   </Tab>
 </Tabs>
 
@@ -76,40 +81,46 @@ Cada especialista define as suas próprias taxas de consulta com base em:
     ### Selecionar Consulta
 
     Escolhe o horário da consulta e prossegue para o checkout.
+
   </Step>
   <Step>
     ### Introduzir Dados de Pagamento
 
     Fornece as informações de pagamento de forma segura.
+
   </Step>
   <Step>
     ### Autorização
 
     O pagamento é autorizado e retido de forma segura.
+
   </Step>
   <Step>
     ### Confirmação
 
     Recebe email de confirmação instantâneo com detalhes da consulta.
+
   </Step>
 </Steps>
 
 <Callout>
-  O teu pagamento é retido de forma segura até 24 horas após a conclusão da consulta. Isto protege tanto a ti como ao especialista.
+  O teu pagamento é retido de forma segura até 24 horas após a conclusão da consulta. Isto protege
+  tanto a ti como ao especialista.
 </Callout>
 
 ## Reembolsos e Cancelamentos
 
 ### Janelas de Cancelamento
 
-| Prazo | Montante de Reembolso |
-|-------|----------------------|
-| 48+ horas antes | 100% reembolso |
-| 24-48 horas antes | 50% reembolso |
-| Menos de 24 horas | Sem reembolso |
+| Prazo             | Montante de Reembolso |
+| ----------------- | --------------------- |
+| 48+ horas antes   | 100% reembolso        |
+| 24-48 horas antes | 50% reembolso         |
+| Menos de 24 horas | Sem reembolso         |
 
 <Callout type="warning">
-  As políticas de cancelamento podem variar por especialista. Verifica sempre o perfil do especialista para a política específica antes de marcar.
+  As políticas de cancelamento podem variar por especialista. Verifica sempre o perfil do
+  especialista para a política específica antes de marcar.
 </Callout>
 
 ### Como Pedir Reembolso
@@ -119,16 +130,19 @@ Cada especialista define as suas próprias taxas de consulta com base em:
     ### Aceder às Consultas
 
     Vai a **Minhas Consultas** no portal de paciente.
+
   </Step>
   <Step>
     ### Encontrar a Consulta
 
     Localiza a consulta que desejas cancelar.
+
   </Step>
   <Step>
     ### Pedir Reembolso
 
     Clica em **Cancelar** ou **Pedir Reembolso** e segue as instruções.
+
   </Step>
 </Steps>
 
@@ -143,6 +157,7 @@ Os reembolsos são processados em 5-10 dias úteis para o método de pagamento o
     1. **Contacta primeiro o especialista** - Muitos problemas podem ser resolvidos diretamente
     2. **Contacta o suporte** - Email para support@eleva.care se não resolvido
     3. **Investigação** - Investigaremos e mediaremos a disputa
+
   </Accordion>
 </Accordions>
 
@@ -163,7 +178,8 @@ Cada recibo inclui:
 - ID da transação
 
 <Callout type="info">
-  **Reembolso de Seguro**: Alguns planos de seguro podem reembolsar consultas de telemedicina. O teu recibo inclui todos os detalhes necessários para submeter um pedido.
+  **Reembolso de Seguro**: Alguns planos de seguro podem reembolsar consultas de telemedicina. O teu
+  recibo inclui todos os detalhes necessários para submeter um pedido.
 </Callout>
 
 ## Segurança
@@ -176,11 +192,13 @@ Cada recibo inclui:
     - Nunca armazenamos o número completo do teu cartão
     - Infraestrutura em conformidade com PCI DSS
     - Armazenamento de cartão tokenizado via Stripe
+
   </Tab>
   <Tab value="Segurança da Conta">
     **Proteção da Conta**
 
     Ativa a Autenticação de Dois Fatores (2FA) nas definições da conta para segurança adicional em todas as transações.
+
   </Tab>
 </Tabs>
 
@@ -188,10 +206,12 @@ Cada recibo inclui:
 
 <Accordions>
   <Accordion title="Posso guardar o meu método de pagamento?">
-    Sim, podes guardar o teu cartão para checkout mais rápido. Os dados do cartão são armazenados de forma segura pelo Stripe, não nos nossos servidores.
+    Sim, podes guardar o teu cartão para checkout mais rápido. Os dados do cartão são armazenados de
+    forma segura pelo Stripe, não nos nossos servidores.
   </Accordion>
   <Accordion title="Há taxas escondidas?">
-    Não. O preço mostrado ao marcar é o montante total que pagarás. Sem taxas de plataforma ou cobranças escondidas.
+    Não. O preço mostrado ao marcar é o montante total que pagarás. Sem taxas de plataforma ou
+    cobranças escondidas.
   </Accordion>
   <Accordion title="Em que moeda serei cobrado?">
     Serás cobrado na moeda mostrada no checkout, tipicamente baseada na localização do especialista.
