--- a/src/content/docs/patient/pt/reviews.mdx
+++ b/src/content/docs/patient/pt/reviews.mdx
@@ -16,21 +16,25 @@ Podes deixar uma avaliação após a conclusão da tua consulta. Receberás um e
     ### Aceder a Consultas Passadas
 
     Vai a **Minhas Consultas** → **Passadas** no teu portal de paciente.
+
   </Step>
   <Step>
     ### Selecionar a Consulta
 
     Encontra a consulta concluída que queres avaliar.
+
   </Step>
   <Step>
     ### Avaliar a Experiência
 
     Clica em **Deixar Avaliação** e classifica de 1 a 5 estrelas.
+
   </Step>
   <Step>
     ### Adicionar Feedback
 
     Escreve sobre a tua experiência (opcional mas encorajado).
+
   </Step>
 </Steps>
 
@@ -44,6 +48,7 @@ Podes deixar uma avaliação após a conclusão da tua consulta. Receberás um e
     - Menciona o que foi particularmente útil
     - Partilha feedback construtivo
     - Mantém comentários profissionais
+
   </Tab>
   <Tab value="Evitar">
     **Por Favor Evita**
@@ -52,24 +57,26 @@ Podes deixar uma avaliação após a conclusão da tua consulta. Receberás um e
     - Usar linguagem ofensiva
     - Partilhar informação privada do especialista
     - Avaliar consultas que não frequentaste
+
   </Tab>
 </Tabs>
 
 <Callout type="info">
-  As avaliações são moderadas para garantir que seguem as nossas diretrizes comunitárias. A maioria das avaliações é publicada em 24 horas.
+  As avaliações são moderadas para garantir que seguem as nossas diretrizes comunitárias. A maioria
+  das avaliações é publicada em 24 horas.
 </Callout>
 
 ## Compreender as Classificações
 
 ### Sistema de Estrelas
 
-| Classificação | Significado |
-|---------------|-------------|
-| 5 Estrelas | Excelente - Excedeu expectativas |
-| 4 Estrelas | Muito Bom - Correspondeu às expectativas |
-| 3 Estrelas | Bom - Margem para melhoria |
-| 2 Estrelas | Razoável - Alguns problemas |
-| 1 Estrela | Fraco - Problemas significativos |
+| Classificação | Significado                              |
+| ------------- | ---------------------------------------- |
+| 5 Estrelas    | Excelente - Excedeu expectativas         |
+| 4 Estrelas    | Muito Bom - Correspondeu às expectativas |
+| 3 Estrelas    | Bom - Margem para melhoria               |
+| 2 Estrelas    | Razoável - Alguns problemas              |
+| 1 Estrela     | Fraco - Problemas significativos         |
 
 ### Critérios de Avaliação
 
@@ -77,7 +84,8 @@ Ao deixar uma avaliação, considera estes aspetos:
 
 <Accordions>
   <Accordion title="Comunicação">
-    O especialista foi claro e fácil de compreender? Explicou as coisas de forma que pudesses seguir?
+    O especialista foi claro e fácil de compreender? Explicou as coisas de forma que pudesses
+    seguir?
   </Accordion>
   <Accordion title="Profissionalismo">
     A consulta foi conduzida profissionalmente? Sentiste-te respeitada e ouvida?
@@ -97,11 +105,11 @@ Ao deixar uma avaliação, considera estes aspetos:
 
 Os especialistas podem ganhar distintivos de reconhecimento baseados no desempenho:
 
-| Distintivo | Critérios |
-|------------|-----------|
-| Top Expert | Avaliações consistentemente altas (4.8+ média) |
-| Resposta Rápida | Responde a inquéritos em 24 horas |
-| Altamente Recomendado | Alta percentagem de marcações repetidas |
+| Distintivo            | Critérios                                      |
+| --------------------- | ---------------------------------------------- |
+| Top Expert            | Avaliações consistentemente altas (4.8+ média) |
+| Resposta Rápida       | Responde a inquéritos em 24 horas              |
+| Altamente Recomendado | Alta percentagem de marcações repetidas        |
 
 ## Ler Avaliações
 
@@ -115,7 +123,8 @@ Vê as avaliações dos especialistas diretamente na página de perfil:
 4. Filtra por classificação ou data
 
 <Callout>
-  Todas as avaliações na Eleva Care são de pacientes verificados que completaram uma consulta. Isto garante feedback autêntico e confiável.
+  Todas as avaliações na Eleva Care são de pacientes verificados que completaram uma consulta. Isto
+  garante feedback autêntico e confiável.
 </Callout>
 
 ### Estatísticas de Avaliações
@@ -137,6 +146,7 @@ Cada perfil de especialista mostra:
     2. Encontra a avaliação que queres editar
     3. Clica em **Editar** e faz as alterações
     4. Guarda as atualizações
+
   </Accordion>
   <Accordion title="Apagar a Tua Avaliação">
     Para remover a tua avaliação:
@@ -148,6 +158,7 @@ Cada perfil de especialista mostra:
     <Callout type="warning">
       Uma vez apagada, a tua avaliação não pode ser recuperada. Podes deixar uma nova avaliação se desejares.
     </Callout>
+
   </Accordion>
   <Accordion title="Respostas de Especialistas">
     Os especialistas podem responder a avaliações. Se um especialista responder:
@@ -155,6 +166,7 @@ Cada perfil de especialista mostra:
     - Receberás uma notificação
     - Vê a resposta na página da avaliação
     - As respostas são visíveis para todos os utilizadores
+
   </Accordion>
 </Accordions>
 
@@ -169,16 +181,19 @@ Se vires uma avaliação que viola as nossas diretrizes:
     ### Reportar a Avaliação
 
     Clica em **Reportar** na avaliação em questão.
+
   </Step>
   <Step>
     ### Selecionar Motivo
 
     Escolhe o motivo mais apropriado para o reporte.
+
   </Step>
   <Step>
     ### Submeter
 
     A nossa equipa investigará e tomará medidas se necessário.
+
   </Step>
 </Steps>
 
@@ -190,13 +205,16 @@ Para problemas significativos com um especialista, contacta support@eleva.care d
 
 <Accordions>
   <Accordion title="As avaliações são anónimas?">
-    As avaliações mostram o teu primeiro nome e inicial do apelido (ex: "Maria S."). O teu nome completo não é apresentado publicamente.
+    As avaliações mostram o teu primeiro nome e inicial do apelido (ex: "Maria S."). O teu nome
+    completo não é apresentado publicamente.
   </Accordion>
   <Accordion title="Os especialistas podem ver quem deixou avaliações negativas?">
-    Os especialistas podem ver o primeiro nome e inicial de todos os avaliadores, independentemente da classificação.
+    Os especialistas podem ver o primeiro nome e inicial de todos os avaliadores, independentemente
+    da classificação.
   </Accordion>
   <Accordion title="Quanto tempo ficam as avaliações visíveis?">
-    As avaliações permanecem visíveis indefinidamente a menos que as apagues ou violem as nossas diretrizes.
+    As avaliações permanecem visíveis indefinidamente a menos que as apagues ou violem as nossas
+    diretrizes.
   </Accordion>
   <Accordion title="Posso avaliar se o especialista cancelou?">
     Não, as avaliações só podem ser deixadas para consultas concluídas.
